add GDPR and customer expiry
